fix styling to collapse navbar on a large screen

--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -149,7 +149,7 @@ body {
 #navbar-toggle-cbox {
     display: none;
 }
-@media only screen and (max-width: 991px) {
+@media only screen and (max-width: 1199px) {
     #navbar-toggle-cbox:checked ~ .collapse {
         display:block;
     }
